[gd_scene load_steps=17 format=2]

[ext_resource path="res://Sphinx_Eye.tscn" type="PackedScene" id=1]
[ext_resource path="res://StaticSphinx.gd" type="Script" id=2]
[ext_resource path="res://Sprites/great_sphinx.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 768, 384 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 768, 0, 768, 384 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 1536, 0, 768, 384 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 2304, 0, 768, 384 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 768, 384 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 2304, 0, 768, 384 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 3072, 0, 768, 384 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 3840, 0, 768, 384 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 3840, 0, 768, 384 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 3072, 0, 768, 384 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 2304, 0, 768, 384 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 768, 384 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": false,
"name": "Awaken",
"speed": 2.0
}, {
"frames": [ SubResource( 13 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 12 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": false,
"name": "Fire",
"speed": 3.0
}, {
"frames": [ SubResource( 5 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[node name="StaticSphinx" type="KinematicBody2D"]
z_index = -1
script = ExtResource( 2 )

[node name="Sprite2" parent="." instance=ExtResource( 1 )]

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 1 )
frames = SubResource( 6 )
playing = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -361, 186, -352, 111, -340, 111, -339, 100, -325, 100, -321, 90, -315, 88, -314, 83, -294, 79, -291, 72, -281, 71, -278, 64, -136, 64, -108, 55, -85, 53, -85, 49, -73, 47, -66, 44, 41, 42, 53, 56, 59, 60, 59, 70, 66, 70, 65, 80, 74, 82, 74, 93, 78, 93, 78, 99, 88, 99, 96, 109, 96, 123, 188, 130, 279, 147, 283, 171, -16, 169, -30, 186 )

[node name="AwakenTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="FireTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="FirePosition" type="Position2D" parent="."]
position = Vector2( 40, -6 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 11, -22.5 )
scale = Vector2( 5.4, 5.35 )
process_parent = true
physics_process_parent = true

[connection signal="timeout" from="AwakenTimer" to="." method="_on_AwakenTimer_timeout"]
[connection signal="timeout" from="FireTimer" to="." method="_on_FireTimer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
